<resources>
    <string name="app_name" >Just java project</string>
    <string name="_0" translatable="false">0</string>
    <string name="quantity">Quantity</string>
    <string name="order">order</string>
    <string name="price">Price</string>
    <string name="cost">cost</string>

    <string name="u002b">+</string>
    <string name="minus">-</string>
    <string name="_10" translatable="false">10</string>
    <string name="sandwich" translatable="false">sandWich</string>
    <string name="name">Name</string>
    <string name="food_list">Food List</string>
</resources>